font changes, added a table

--- a/css/main.css
+++ b/css/main.css
@@ -18,22 +18,61 @@ body {
   justify-content: space-around;
 }
 
+authors {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 0;
+  }
+
+
+h1 {
+  font-family: 'Bilbo Swash Caps', cursive;
+  font-size: 120px;
+}
+
 h2 {
   padding-bottom: 10px;
   border-bottom: 1px solid #aaa;
   margin: 70px 0;
+  font-family: 'Bilbo Swash Caps', cursive;
+  font-size: 50px;
 }
 
 .image-profile {
   width: 50%;
 }
 
-.image-article {
-  margin: 20px;
+.image-meme {
+  width: 60%;
+  margin: 15px;
 }
 
 .image-brain {
   width: 50%;
+}
+
+table
+{
+border-collapse: collapse;
+border-spacing: 0px;
+margin: auto;
+}
+table, th, td
+{
+padding: 10px;
+border: 1px solid #aaa;
+}
+
+th {
+  text-align: center;
+}
+th:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+td:hover {
+  background: rgba(255, 255, 255, 0.3);
 }
 
 footer {
